<resources>
    <string name="app_name">The Holy Bible</string>
    <string name="preferences">Preferences</string>
    <string name="bible_exist">Bible Exist</string>

    <string name="lang_es" translatable="false">Spanish</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="flag_menu" translatable="false">Flag</string>
    <string name="title_activity_language_change_loader" translatable="false">LanguageChangeLoader</string>
    <string name="success_lang_change">Success! Let\'s go.</string>

    <!--    Titles-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="bible">Bible</string>

    <string name="chapter_old">ANTIGUO</string>
    <string name="chapter_new">NUEVO</string>
    <string name="chapter_labels">ETIQUETAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_card_conc_title">Concordance</string>
    <string name="search_card_conc_desc">Find the concordances</string>
    <string name="cardimage">Image</string>
    <string name="search_card_dict_title">Dictionary</string>
    <string name="search_card_dict_desc">Find the words you don\'t know</string>
    <string name="search_card_label_title">Your Labels</string>
    <string name="search_card_label_desc">Find text in the titles of your labels</string>
    <string name="search_card_text_title">Bible search</string>
    <string name="search_card_text_desc">Search text in the Bible</string>
    <string name="search_textview">You can search for...</string>
    <string name="dash_new_value">Create new Label</string>
    <string name="dash_text_view">Your Labels:</string>
    <string name="home_last_seen_text">Last Seen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash_creator_fragment_name_txtview">Name of Label</string>
    <string name="dash_creator_fragment_color_txtview">Color of Label:</string>
    <string name="dash_creator_fragment_button">Create Label</string>
    <string name="downloaded">Downloaded:</string>
    <string name="search_card_maps_title">Maps</string>
    <string name="search_card_maps_desc">Search in the Bible Maps</string>

    <!--    GOOGLE POC-->
    <string name="override">Override</string>
    <string name="sync_up">Sync Up</string>
    <string name="cancel">Cancel</string>
    <string name="syncup_prompt_message">You have 2 options: \n\n 1) Override (keep your existing data in this device). \n\n 2) Sync Up (download the data from the Server).</string>
    <string name="syncup_prompt_title">There is a different version of your data in the Server.</string>

</resources>
