<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bnav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"></item>
    <item
        android:id="@+id/bnav_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"></item>
    <item
        android:id="@+id/bnav_bible"
        android:title="@string/bible"
        android:icon="@drawable/ic_library_books"></item>
    <item
        android:id="@+id/bnav_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"></item>
    <item
        android:id="@+id/bnav_settings"
        android:title="Settings"
        android:icon="@drawable/ic_settings"></item>
</menu>